crates/twin-openai/tests/snapshots/chat_text_stream.snap
---
source: crates/twin-openai/tests/common/normalize.rs
---
{
  "status": 200,
  "content_type": "text/event-stream",
  "milestones": [
    "role",
    "content_delta",
    "finish[stop]",
    "usage",
    "done"
  ],
  "assembled": {
    "content": "[text]",
    "finish_reason": "stop",
    "usage": {
      "prompt_tokens": "[int]",
      "completion_tokens": "[int]",
      "total_tokens": "[int]"
    }
  },
  "done": true
}
