crates/twin-openai/tests/snapshots/chat_tool_call.snap
---
source: crates/twin-openai/tests/common/normalize.rs
---
{
  "status": 200,
  "content_type": "application/json",
  "body": {
    "id": "[id]",
    "object": "chat.completion",
    "created": "[timestamp]",
    "model": "gpt-5-nano-2025-08-07",
    "choices": [
      {
        "index": 0,
        "finish_reason": "tool_calls",
        "message": {
          "role": "assistant",
          "content": null,
          "tool_calls": [
            {
              "id": "[id]",
              "type": "function",
              "function": {
                "name": "lookup_weather",
                "arguments": {
                  "city": "Boston"
                }
              }
            }
          ]
        }
      }
    ],
    "usage": {
      "prompt_tokens": "[int]",
      "completion_tokens": "[int]",
      "total_tokens": "[int]"
    }
  }
}
