crates/twin-openai/tests/snapshots/responses_structured.snap
---
source: crates/twin-openai/tests/common/normalize.rs
---
{
  "status": 200,
  "content_type": "application/json",
  "body": {
    "id": "[id]",
    "object": "response",
    "model": "gpt-5-nano-2025-08-07",
    "status": "completed",
    "output": [
      {
        "id": "[id]",
        "type": "message",
        "role": "assistant",
        "content": [
          {
            "type": "structured",
            "json": {
              "message": "Short structured answer ready.",
              "ok": true
            }
          }
        ]
      }
    ],
    "usage": {
      "input_tokens": "[int]",
      "output_tokens": "[int]",
      "total_tokens": "[int]"
    }
  }
}
