crates/twin-openai/tests/snapshots/responses_tool_call.snap
---
source: crates/twin-openai/tests/common/normalize.rs
---
{
  "status": 200,
  "content_type": "application/json",
  "body": {
    "id": "[id]",
    "object": "response",
    "model": "gpt-5-nano-2025-08-07",
    "status": "completed",
    "output": [
      {
        "id": "[id]",
        "type": "function_call",
        "call_id": "[id]",
        "name": "lookup_weather",
        "arguments": {
          "city": "Boston"
        }
      }
    ],
    "usage": {
      "input_tokens": "[int]",
      "output_tokens": "[int]",
      "total_tokens": "[int]"
    }
  }
}
